# Challenges_2024_Public

./: README.md
beginner/intercepted-transmissions/: README.md  ctfcli.yaml
beginner/intercepted-transmissions/solve/: WRITEUP.md
beginner/intercepted-transmissions/src/: encoding.rules  go.mod  main.go
beginner/number-mashing/: README.md  ctfcli.yaml  docker-compose.yml
beginner/number-mashing/publish/: number-mashing
beginner/parrot-the-emu/: README.md  ctfcli.yaml  docker-compose.yml
beginner/shufflebox/: README.md  ctfcli.yaml
beginner/sssshhhh/: README.md  ctfcli.yaml  docker-compose.yml
beginner/sunzi-perfect-math-class/: README.md  ctfcli.yaml  docker-compose.yml
beginner/tldr-please-summarise/: README.md  ctfcli.yaml
beginner/vector-overflow/: README.md  ctfcli.yaml  docker-compose.yml
beginner/yawa/: README.md  ctfcli.yaml  docker-compose.yml
beginner/zoo-feedback-form/: README.md  ctfcli.yaml  docker-compose.yml
crypto/aes/: README.md  ctfcli.yaml
crypto/decrypt-then-eval/: README.md  ctfcli.yaml  docker-compose.yml
crypto/kyber-decryption-oracle/: README.md  ctfcli.yaml  docker-compose.yml
crypto/my-array-generator/: README.md  ctfcli.yaml
crypto/poly1305-otm/: README.md  ctfcli.yaml  docker-compose.yml
crypto/super-party-computation/: README.md  ctfcli.yaml  docker-compose.yml
crypto/three-line-crypto/: README.md  ctfcli.yaml
crypto/v-for-vieta/: README.md  ctfcli.yaml  docker-compose.yml
forensics/babys-first-forensics/: README.md  ctfcli.yaml
forensics/badpolicies/: README.md  ctfcli.yaml
forensics/emuc2/: README.md  ctfcli.yaml  docker-compose.yml
forensics/lostinmemory/: README.md  ctfcli.yaml
forensics/macromagic/: README.md  ctfcli.yaml
forensics/samiam/: README.md  ctfcli.yaml
hardware/birdloader/: README.md  ctfcli.yaml
hardware/birdloader/solve/: CMakeLists.txt  WRITEUP.md  solver.c
hardware/crash-landing/: README.md  ctfcli.yaml
hardware/ductf/: README.md  ctfcli.yaml
hardware/ductf/solve/: CMakeLists.txt  WRITEUP.md  bbspi.c  bbspi.h  solve.c
hardware/ductf/src/firmware/: CMakeLists.txt  bbspi.c  bbspi.h  ductf.c  mbedtls_config.h  mfrc522.c  mfrc522.h  pico_sdk_import.cmake  picosdk.patch
hardware/i-see/: README.md  ctfcli.yaml
hardware/i-see/solve/: Cargo.toml  WRITEUP.md  build.rs  flake.nix  main.rs
hardware/i-see/solve/.cargo/: config.toml
hardware/sirkit/: README.md  ctfcli.yaml
hardware/sounds-nice/: README.md  ctfcli.yaml
hardware/the-door/: README.md  ctfcli.yaml
hardware/the-door/solve/: CMakeLists.txt  WRITEUP.md  solve.c
hardware/the-door/src/firmware/: CMakeLists.txt  bbspi.c  bbspi.h  main.c
misc/discord/: README.md  ctfcli.yaml
misc/dnadecay/: README.md  ctfcli.yaml
misc/mkductfiso/: README.md  ctfcli.yaml
misc/pkijs-eq/: README.md  ctfcli.yaml  docker-compose.yml
misc/pkijs-lt/: README.md  ctfcli.yaml  docker-compose.yml
misc/survey/: README.md  ctfcli.yaml
misc/the-other-minimal-php/: README.md  ctfcli.yaml  docker-compose.yml
misc/wackyrecipe/: README.md  ctfcli.yaml
misc/wsvpn/: README.md  ctfcli.yaml  docker-compose.yml
osint/back-to-the-jungle/: README.md  ctfcli.yaml
osint/bridget-lives/: README.md  ctfcli.yaml
osint/cityviews/: README.md  ctfcli.yaml
osint/marketing/: README.md  ctfcli.yaml
osint/offtheramp/: README.md  ctfcli.yaml
osint/they-re-making-decoys/: README.md  ctfcli.yaml
pwn/especially-secure-boot/: README.md  ctfcli.yaml  docker-compose.yml
pwn/faulty-kernel/: README.md  ctfcli.yaml  docker-compose.yml
pwn/mirage/: README.md  ctfcli.yaml  docker-compose.yml
pwn/pac-shell/: README.md  ctfcli.yaml  docker-compose.yml
pwn/sheep-farm-simulator/: README.md  ctfcli.yaml  docker-compose.yml
pwn/sign-in/: README.md  ctfcli.yaml  docker-compose.yml
rev/adorable-encrypted-animal/: README.md  ctfcli.yaml
rev/average-assembly-assignment/: README.md  ctfcli.yaml  docker-compose.yml
rev/dungeon/: README.md  ctfcli.yaml  docker-compose.yml
rev/jmp-flag/: README.md  ctfcli.yaml
rev/pressing-buttons/: README.md  ctfcli.yaml
rev/rusty-vault/: README.md  ctfcli.yaml
rev/ternary-brained/: README.md  ctfcli.yaml
web/co2/: README.md  ctfcli.yaml  docker-compose.yml
web/co2/src/: .env  (+3 more)
web/co2v2/: README.md  ctfcli.yaml  docker-compose.yml
web/hah-got-em/: README.md  ctfcli.yaml  docker-compose.yml
web/i-am-confusion/: README.md  ctfcli.yaml  docker-compose.yml
web/prisoner-processor/: README.md  ctfcli.yaml  docker-compose.yml
web/sniffy/: README.md  ctfcli.yaml  docker-compose.yml
web/waifu/: README.md  ctfcli.yaml  docker-compose.yml
(+512 files in other folders)
